[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assetts/sword.png" type="Texture" id=1]
[ext_resource path="res://Assetts/goblin.png" type="Texture" id=2]
[ext_resource path="res://Goblin.gd" type="Script" id=3]
[ext_resource path="res://Enemies/EnemyBase.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.66443
height = 7.68722

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.51228, 3.51228 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dagger Pivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( -13, 0 ), Vector2( -10, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dagger Pivot/Sprite/Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Goblin" instance=ExtResource( 4 )]
script = ExtResource( 3 )
hp = 6

[node name="Sprite" parent="." index="0"]
modulate = Color( 1, 1, 1, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
offset = Vector2( 0.401, 0 )

[node name="CollisionShape2D" parent="." index="1"]
rotation = -0.00139247
shape = SubResource( 1 )

[node name="HPLabel" parent="." index="3"]
margin_top = -18.7534
margin_bottom = -4.75344

[node name="Dagger Pivot" type="Node2D" parent="." index="4"]

[node name="Sprite" type="Sprite" parent="Dagger Pivot" index="0"]
position = Vector2( -10, 0 )
rotation = -1.5708
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Dagger Pivot/Sprite" index="0"]
monitoring = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dagger Pivot/Sprite/Area2D" index="0"]
position = Vector2( -0.438587, -0.146194 )
shape = SubResource( 2 )

[node name="AttackAnimPlayer" type="AnimationPlayer" parent="." index="5"]
anims/Attack = SubResource( 3 )

[node name="MoveTimer" type="Timer" parent="." index="6"]
autostart = true

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 1.5
autostart = true
[connection signal="body_entered" from="Dagger Pivot/Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
